<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white"
    tools:context="com.softgarden.garden.view.password.ForgetNextActivity">

    <include layout="@layout/layout_toolbar"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="30px">


        <EditText
            android:id="@+id/et_new_pswd"
            style="@style/et_match_style"
            android:hint="@string/input_new_pswd"/>

        <EditText
            android:id="@+id/et_confirm_pswd"
            style="@style/et_match_style"
            android:layout_marginTop="30px"
            android:hint="@string/confirm_pswd"/>

        <Button
            android:id="@+id/btn_complete"
            style="@style/btn_bg_style"
            android:layout_marginTop="40px"
            android:text="@string/complete"/>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
