<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30px">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/et_background">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawablePadding="20px"
            android:textSize="32px"
            android:singleLine="true"
            android:textColorHint="@color/gray_c"
            android:layout_marginRight="20px"
            android:hint="@string/input_phone_number"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/shouji"/>

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="66px"
            android:text="@string/get_code"
            android:textSize="28px"
            android:textColor="@color/pink_text"
            android:background="@drawable/selector_get_code"/>
    </com.zhy.autolayout.AutoLinearLayout>


    <EditText
        android:id="@+id/et_verification_code"
        style="@style/et_match_style"
        android:layout_marginTop="30px"
        android:drawablePadding="20px"
        android:hint="@string/input_verification_code"
        android:drawableLeft="@mipmap/yanzhegma"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/btn_bg_style"
        android:layout_marginTop="40px"
        android:text="@string/next"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80px"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/gray_c"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:textSize="26px"
            android:textColor="@color/gray_darker"
            android:text="@string/or_you_can"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/gray_c"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/ll_call"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginTop="42px"
        android:background="@drawable/shape_call_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/dianhua"
            android:layout_marginRight="20px"/>

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36px"
            android:textColor="@color/blue"
            android:text="@string/phone_number"
            />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
