<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    tools:context="com.softgarden.garden.view.feedback.activity.SuggestionActivity">

    <include layout="@layout/layout_toolbar"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="vertical"
        android:background="@color/bg_white">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_complaint"
                style="@style/tab_text"
                android:background="?attr/selectableItemBackground"
                android:text="@string/complaint"/>
            <TextView
                android:id="@+id/tv_suggestion"
                style="@style/tab_text"
                android:background="?attr/selectableItemBackground"
                android:text="@string/suggestion"/>
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_indicator"
            android:layout_width="200dp"
            android:layout_height="1dp">

            <View
                android:layout_width="120px"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"/>
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="480px"
        android:layout_marginTop="24px"
        android:background="@color/bg_white"></android.support.v4.view.ViewPager>


    <Button
        style="@style/btn_bg_style"
        android:layout_marginTop="60px"
        android:text="@string/commit"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>
</com.zhy.autolayout.AutoLinearLayout>
